fix: Q6 choices order

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -30,8 +30,8 @@
   "Q5C": "C. I Love it! It's Cute!",
   "Q5D": "D. I Don't Know",
   "Q6": "Do you mind if your cat sheds its fur?",
-  "Q6A": "A. I Don't Care",
+  "Q6A": "A. Yes, It's too much trouble to clean",
   "Q6B": "B. As long as it's not too much",
-  "Q6C": "C. Yes, It's too much trouble to clean",
+  "Q6C": "C. No, I Don't Care",
   "Q6D": "D. I Don't Know"
 }
