--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -3,35 +3,35 @@
   "Q0A": "A. Small 2~4kg",
   "Q0B": "B. Medium 4~6kg",
   "Q0C": "C. Large 6~11kg",
-  "Q0D": "D. I Don't Knwo",
+  "Q0D": "D. I Don't Care",
   "Q1": "How energetic do you want your cat to be?",
   "Q1A": "A. Quite and Lazy",
   "Q1B": "B. Normal",
   "Q1C": "C. Energetic",
-  "Q1D": "D. I Don't Know",
+  "Q1D": "D. I Don't Care",
   "Q2": "How intelligent do you want your cat to be?",
   "Q2A": "A. Sometimes Silly",
   "Q2B": "B. Smart",
   "Q2C": "C. Genius",
-  "Q2D": "D. I Don't Know",
+  "Q2D": "D. I Don't Care",
   "Q3": "Do you want your cat to be friendly to the child?",
   "Q3A": "A. Not quite friendly to the child",
   "Q3B": "B. Friendly",
   "Q3C": "C. It will help you take care of the child",
-  "Q3D": "D. I Don't Know",
+  "Q3D": "D. I Don't Care",
   "Q4": "Do you want your cat to be friendly to the dog?",
   "Q4A": "A. It hates dog",
   "Q4B": "B. It doesn't care the dog",
   "Q4C": "C. It loves playing with dogs",
-  "Q4D": "D. I Don't Know",
+  "Q4D": "D. I Don't Care",
   "Q5": "Do you like your cat to meow?",
   "Q5A": "A. Please be Quite",
   "Q5B": "B. It's Ok",
   "Q5C": "C. I Love it! It's Cute!",
-  "Q5D": "D. I Don't Know",
+  "Q5D": "D. I Don't Care",
   "Q6": "Do you mind if your cat sheds its fur?",
   "Q6A": "A. Yes, It's too much trouble to clean",
   "Q6B": "B. As long as it's not too much",
-  "Q6C": "C. No, I Don't Care",
-  "Q6D": "D. I Don't Know"
+  "Q6C": "C. No, it doesn't matter",
+  "Q6D": "D. I Don't Care"
 }
